# flet-open-file

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publishing.yaml
docs/: FletOpenFile.md  index.md
examples/flet_open_file_example/: pyproject.toml
examples/flet_open_file_example/src/: main.py
src/flet_open_file/: __init__.py  flet_open_file.py
src/flet_open_file.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_open_file/: README.md  pubspec.yaml
src/flutter/flet_open_file/lib/: flet_open_file.dart
src/flutter/flet_open_file/lib/src/: create_control.dart  extension.dart  flet_open_file.dart
