[project]
name = "flet-open-file"
version = "0.1.1"
description = "FletOpenFile control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Creeper19472", email = "creeper19472@crpteam.club" }
]
dependencies = [
    "flet==0.70.0.dev6196",
]

[project.urls]
Homepage = "https://github.com/creeper19472/flet-open-file"
Documentation = "https://github.com/creeper19472/flet-open-file"
Repository = "https://github.com/creeper19472/flet-open-file"
Issues = "https://github.com/creeper19472/flet-open-file/issues"

[tool.setuptools.package-data]
"flutter.flet_open_file" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.70.0.dev6196",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]
prerelease = "allow"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.70.0.dev6196"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
